--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -33,6 +33,14 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.8</version>
+                <configuration>
+                    <targetClasses>
+                        <param>minesweeper.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>minesweeper.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
         </plugins>
     </build>
