--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
-script: mvn test -f ./minesweeper/pom.xml
+script: mvn test -DrepoToken=$coveralls_token -f ./minesweeper/pom.xml cobertura:cobertura coveralls:report
 jdk:
   - oraclejdk8
