Remove minesweeper.ui from Cobertura scope

--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -72,6 +72,11 @@
                     <maxmem>256m</maxmem>
                     <!-- aggregated reports for multi-module projects -->
                     <aggregate>true</aggregate>
+                    <instrumentation>
+                        <ignores>
+                            <ignore>minesweeper.ui.*</ignore>
+                        </ignores>
+                    </instrumentation>
                 </configuration>
             </plugin>
         </plugins>
