--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -35,10 +35,10 @@
                 <version>1.1.8</version>
                 <configuration>
                     <targetClasses>
-                        <param>minesweeper.*</param>
+                        <param>minesweeper.logic.*</param>
                     </targetClasses>
                     <targetTests>
-                        <param>minesweeper.*</param>
+                        <param>minesweeper.logic.*</param>
                     </targetTests>
                 </configuration>
             </plugin>
