--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -76,9 +76,36 @@
                         <ignores>
                             <ignore>minesweeper.ui.*</ignore>
                         </ignores>
+                        <excludes>
+                            <exclude>minesweeper.ui.*</exclude>
+                        </excludes>
                     </instrumentation>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <instrumentation>
+                        <excludes>
+                            <exclude>minesweeper.ui.*</exclude>
+                        </excludes>
+                        <ignores>
+                            <ignore>minesweeper.ui.*</ignore>
+                        </ignores>
+                    </instrumentation>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                    <check/>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
