Remove Main from test coverage

--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -79,6 +79,9 @@
                         <excludes>
                             <exclude>minesweeper/ui/*</exclude>
                         </excludes>
+                        <ignores>
+                            <ignore>minesweeper.Main</ignore>
+                        </ignores>
                     </instrumentation>
                 </configuration>
             </plugin>
@@ -95,6 +98,9 @@
                         <excludes>
                             <exclude>minesweeper/ui/*</exclude>
                         </excludes>
+                        <ignores>
+                            <ignore>minesweeper.Main</ignore>
+                        </ignores>
                         <ignores>
                             <ignore>minesweeper.ui.*</ignore>
                         </ignores>
