Fix Main location so project can be run. Unfixes coverage :(

--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -78,7 +78,7 @@
                         </ignores>
                         <excludes>
                             <exclude>minesweeper/ui/*</exclude>
-                            <exclude>minesweeper/main/*</exclude>
+                            <exclude>minesweeper/Main*</exclude>
                         </excludes>
                     </instrumentation>
                 </configuration>
@@ -98,7 +98,7 @@
                         </ignores>
                         <excludes>
                             <exclude>minesweeper/ui/*</exclude>
-                            <exclude>minesweeper/main/*</exclude>
+                            <exclude>minesweeper/Main*</exclude>
                         </excludes>
                     </instrumentation>
                     <formats>
